--- a/src/App.css
+++ b/src/App.css
@@ -37,7 +37,7 @@ body {
 }
 
 .quiz-container {
-  width: 500px;
+  width: 600px;
   max-width: 600px;
   background: #0f4c75;
   padding: 20px;
@@ -64,18 +64,18 @@ span {
 button {
   width: 100%;
   padding: 15px;
-  border: none;
+  border: 3px solid #ff6b6b;
   border-radius: 10px;
   font-size: 18px;
   font-weight: bold;
   background-color: #ff6b6b;
   color: #ffffff;
   cursor: pointer;
-  transition: background-color 0.3s ease, box-shadow 0.3s ease;
+  transition: all 0.3s ease-in-out;
 }
 
 button:hover {
-  box-shadow: 0 4px 15px rgba(255, 107, 107, 0.6);
+  border: 3px solid #1b262c;
 }
 
 .quiz-options button {
@@ -207,4 +207,86 @@ button:hover {
 .wrong-answer {
   background-color: #dc3545;
   color: white;
+}
+
+.timer {
+  font-size: 20px;
+  font-weight: bold;
+  color: #ff6b6b;
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+
+@media (max-width: 1024px) {
+  .quiz-container {
+    max-width: 500px;
+    padding: 15px;
+  }
+
+  h2 {
+    font-size: 22px;
+  }
+
+  h3 {
+    text-align: center;
+    font-size: 18px;
+  }
+
+  .option button {
+    font-size: 14px;
+    max-width: 250px;
+  }
+
+  .timer {
+    font-size: 16px;
+  }
+}
+
+@media (max-width: 768px) {
+  .quiz-container {
+    max-width: 400px;
+    padding: 10px;
+  }
+
+  h2 {
+    font-size: 20px;
+  }
+
+  h3 {
+    font-size: 16px;
+  }
+
+  .option button {
+    font-size: 14px;
+    max-width: 250px;
+  }
+
+  .timer {
+    font-size: 15px;
+  }
+}
+
+@media (max-width: 480px) {
+  .quiz-container {
+    max-width: 300px;
+    padding: 5px;
+  }
+
+  h2 {
+    font-size: 18px;
+  }
+
+  h3 {
+    font-size: 14px;
+  }
+
+  .option button {
+    font-size: 14px;
+    max-width: 250px;
+  }
+
+  .timer {
+    font-size: 14px;
+  }
 }
